# calendar-app

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  calendar.h  callbacks.c  callbacks.h  constants.h  gui.c  gui.h  main.c  makefile
src/: gui.c
tests/: README.md  valid_input1
